--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,13 @@ mat-form-field {
   border-radius: 8px;
 }
 
+.loader {
+  text-align: center;
+  font-size: 1.5em;
+  padding: 20px;
+  color: #3f51b5;
+}
+
 table {
   width: 100%;
   border-collapse: separate;
